force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__ProblemCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemCategory__c</fullName>
    <label>Problem Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>