force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__ProblemPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemPriority__c</fullName>
    <label>Problem Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>