force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__ProblemStatusCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemStatusCategory__c</fullName>
    <label>Problem Status Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemStatusCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>