force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__ProblemSubCateogory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProblemSubCateogory__c</fullName>
    <label>Problem Sub Cateogory</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProblemSubCateogory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>