force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__rel_1702009442154_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009442154_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem_ParentProblemId_map_Problem__rel</label>
    <referenceTo>ssot__Problem__dlm</referenceTo>
    <relationshipLabel>Problem_ParentProblemId_map_Problem__rel</relationshipLabel>
    <relationshipName>rel_1702009442154_end</relationshipName>
    <type>Lookup</type>
</CustomField>