force-app/main/default/objects/ssot__Problem__dlm/fields/ssot__ResolutionSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResolutionSummaryText__c</fullName>
    <label>Resolution Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResolutionSummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>